--- a/src/public/styles/home.css
+++ b/src/public/styles/home.css
@@ -83,3 +83,11 @@ body {
   background: #fff;
   z-index: 1;
 }
+
+.container_phone {
+  position: absolute;
+  z-index: 4;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
