--- a/src/views/index.html
+++ b/src/views/index.html
@@ -265,8 +265,11 @@
           </div>
         </section>
         <section id="conversation" class="conversation">
-          <h1>Converse</h1>
-          <p class="text-start">Envie e receba mensagens para seus amigos.</p>
+          <h1>MindMeet</h1>
+          <p class="text-start">
+            Transforme suas sessões de terapia em experiências ainda mais
+            pessoais.
+          </p>
         </section>
       </div>
 
@@ -290,30 +293,59 @@
 
             <ul id="side_historic_call" class="list_historico_call"></ul>
           </section>
+
+          <section id="main_historic" class="conversation">
+            <!-- <h1>MindMeet</h1>
+            <p class="text-start">
+              Transforme suas sessões de terapia em experiências ainda mais
+              pessoais.
+            </p> -->
+            <div class="main_info_data_call">
+              <div class="title_data_call">Informações da chamada</div>
+              <div class="container_info_data_call">
+                <div class="contact">
+                  <div class="informations_historico_contact">
+                    <img src="../image/user-3296.svg" />
+                    <p>Pablo Almeida Prata</p>
+                  </div>
+                  <div class="container_buttons">
+                    <button>
+                      <span class="material-icons"> videocam </span>
+                    </button>
+                    <button><span class="material-icons"> phone </span></button>
+                  </div>
+                </div>
+                <div class="info_call"></div>
+              </div>
+            </div>
+          </section>
         </div>
-        <div class="container_incall">
+
+        <div id="container_incall" class="container_incall">
           <div class="app_incall">
             <div class="container_header_incall">
               <div class="info_header_incall">
-                <div class="stopwatch_incall">15:10:45</div>
+                <div id="stopwatch_incall" class="stopwatch_incall">
+                  00:00:00
+                </div>
                 <div class="contact_name_incall">
                   Augusto Leonardo Pereira Alves
                 </div>
               </div>
             </div>
             <div class="container_buttons_incall">
-              <button>
+              <button id="mic_button">
                 <span class="material-icons"> mic </span>
               </button>
-              <button>
+              <button id="videocam_button">
                 <span class="material-icons"> videocam </span>
               </button>
-              <button>
+              <button id="hangup_button">
                 <span class="material-icons"> call_end </span>
               </button>
             </div>
             <div class="container_myCam">
-              <video id="user_video"></video>
+              <video id="user_video" muted="muted"></video>
             </div>
             <div class="container_otherCams">
               <video id="peer_video"></video>
