--- a/src/views/index.html
+++ b/src/views/index.html
@@ -23,7 +23,7 @@
     />
   </head>
   <body>
-    <div id="developer_button"></div>
+    <!-- <div id="developer_button"></div> -->
     <aside id="sidebar" class="sidebar">
       <div class="logo_content">
         <div class="logo">
@@ -328,9 +328,7 @@
                 <div id="stopwatch_incall" class="stopwatch_incall">
                   00:00:00
                 </div>
-                <div class="contact_name_incall">
-                  Augusto Leonardo Pereira Alves
-                </div>
+                <div id="contact_name_incall" class="contact_name_incall"></div>
               </div>
             </div>
             <div class="container_buttons_incall">
@@ -354,6 +352,7 @@
         </div>
       </div>
     </main>
+
     <audio id="sound_new_message" src="../sounds/new_message.mp3"></audio>
 
     <script src="../scripts/socket.io/client-dist/socket.io.js"></script>
