--- a/src/public/styles/calls.css
+++ b/src/public/styles/calls.css
@@ -81,14 +81,12 @@
 }
 
 .list_historico_call li .contact_img img {
-  width: 2.2rem;
   height: 2.2rem;
-  background: white;
+  background-color: white;
   border-radius: 100%;
-}
-
-.info_historico_number_type {
-  margin-left: 1.2rem;
+  border: solid 2px white;
+  box-shadow: rgb(0 0 0 / 66%) 0px 1px 1px;
+  margin-right: 1rem;
 }
 
 .info_historico_number_type .icon_type .material-icons {
@@ -211,8 +209,8 @@
 
 .container_myCam {
   position: absolute;
-  bottom: 2px;
-  right: 2px;
+  bottom: 0px;
+  right: 0px;
   width: 15vw;
   height: 15vh;
   border: solid white 1px;
@@ -353,4 +351,93 @@
 
 .container_buttons button span {
   font-size: 20px;
+}
+
+/* INCOMING CALL */
+
+.incoming_call_ntf {
+  position: fixed;
+  right: 5px;
+  top: 5px;
+  border-radius: 14px;
+  z-index: 99;
+  width: 300px;
+  height: 300px;
+  border: 3px #787878 solid;
+  box-shadow: rgb(0 0 0 / 25%) 0px 14px 28px, rgb(0 0 0 / 22%) 0px 10px 10px;
+  background: url(../image/endless-constellation.svg);
+  transition: all 0.5s ease;
+  opacity: 0;
+}
+
+.main_incoming_call {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 14px;
+}
+
+.info_incoming_call {
+  height: calc(100% - 80px);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  flex-direction: column;
+}
+
+.info_incoming_call .contact_info {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(100% - 60px);
+  font-weight: 600;
+}
+
+.info_incoming_call .contact_info img {
+  margin-bottom: 10px;
+  background-color: white;
+  border-radius: 100%;
+  border: solid 2px white;
+  box-shadow: rgb(0 0 0 / 66%) 0px 1px 1px;
+}
+.info_incoming_call .text_info {
+  font-size: 15px;
+}
+
+.main_incoming_call .container_buttons {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 60px;
+  background: #0000005e;
+  border-radius: 0px 0px 11px 11px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main_incoming_call .container_buttons button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  border: none;
+  color: white;
+  margin: 0px 10px;
+}
+
+.accept_call_button {
+  background: #03bb32;
+  width: 170px;
+  border-radius: 7px;
+}
+
+.reject_call_button {
+  background: red;
+  border-radius: 100%;
+  width: 40px;
 }
