--- a/src/views/index.html
+++ b/src/views/index.html
@@ -343,10 +343,14 @@
               </button>
             </div>
             <div class="container_myCam">
+              <img src="../image/user-3296.svg" />
               <video id="user_video" muted="muted"></video>
             </div>
             <div class="container_otherCams">
-              <video id="peer_video"></video>
+              <div class="person_container">
+                <img src="../image/user-3296.svg" />
+                <video id="peer_video"></video>
+              </div>
             </div>
           </div>
         </div>
