--- a/src/public/styles/chat.css
+++ b/src/public/styles/chat.css
@@ -10,6 +10,7 @@
 
 .chat-selected {
   background-color: #ffffff !important;
+  box-shadow: rgb(0 0 0 / 15%) 1.95px 1.95px 2.6px;
 }
 
 #search-icon {
