--- a/src/views/index.html
+++ b/src/views/index.html
@@ -361,7 +361,7 @@
 
     <script src="../scripts/socket.io/client-dist/socket.io.js"></script>
     <script src="../scripts/websocket.js"></script>
-    <script src="../scripts/global.js"></script>
+    <script src="../scripts/global.js" type="module"></script>
     <script src="../scripts/chat.js" type="module"></script>
     <script src="../scripts/calls.js" type="module"></script>
     <script src="../scripts/sidebar.js"></script>
