Ordenação do histórico e fix informations

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -295,12 +295,12 @@
           </section>
 
           <section id="main_historic" class="conversation">
-            <!-- <h1>MindMeet</h1>
+            <h1>MindMeet</h1>
             <p class="text-start">
               Transforme suas sessões de terapia em experiências ainda mais
               pessoais.
-            </p> -->
-            <div class="main_info_data_call">
+            </p>
+            <!-- <div class="main_info_data_call">
               <div class="title_data_call">Informações da chamada</div>
               <div class="container_info_data_call">
                 <div class="contact">
@@ -317,7 +317,7 @@
                 </div>
                 <div class="info_call"></div>
               </div>
-            </div>
+            </div> -->
           </section>
         </div>
 
