--- a/src/views/index.html
+++ b/src/views/index.html
@@ -295,29 +295,7 @@
           </section>
 
           <section id="main_historic" class="conversation">
-            <h1>MindMeet</h1>
-            <p class="text-start">
-              Transforme suas sessões de terapia em experiências ainda mais
-              pessoais.
-            </p>
-            <!-- <div class="main_info_data_call">
-              <div class="title_data_call">Informações da chamada</div>
-              <div class="container_info_data_call">
-                <div class="contact">
-                  <div class="informations_historico_contact">
-                    <img src="../image/user-3296.svg" />
-                    <p>Pablo Almeida Prata</p>
-                  </div>
-                  <div class="container_buttons">
-                    <button>
-                      <span class="material-icons"> videocam </span>
-                    </button>
-                    <button><span class="material-icons"> phone </span></button>
-                  </div>
-                </div>
-                <div class="info_call"></div>
-              </div>
-            </div> -->
+            <h1>Chamadas recentes</h1>
           </section>
         </div>
 
