--- a/src/public/styles/chat.css
+++ b/src/public/styles/chat.css
@@ -151,9 +151,6 @@
   justify-content: space-between;
   cursor: pointer;
   background-color: rgb(234 234 234);
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
   position: absolute;
   transition: 200ms ease-in-out 0s;
 }
@@ -365,7 +362,14 @@ li > div {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 40px;
+  justify-content: space-between;
 }
+
+.chatlist-header button .label {
+  font-size: 10px;
+}
+
 
 .conversation-panel-messages {
   height: calc(100% - 135px);
