--- a/src/views/index.html
+++ b/src/views/index.html
@@ -79,17 +79,20 @@
               <span style="font-size: 21px" class="material-icons"
                 >person_add</span
               >
+              <span class="label">Novo Contato</span>
             </button>
 
             <button title="Criar grupo" id="new-group-button">
               <span class="material-icons"> groups </span>
+              <span class="label">Novo Grupo</span>
             </button>
 
             <button id="new-chat" title="Nova conversa">
               <img
-                style="height: 16px; margin: 0"
+                style="height: 16px; margin: 0; margin-top: 3px;"
                 src="../image/icons/edit.png"
               />
+              <span class="label">Novo Chat</span>
             </button>
           </header>
           <div class="container-search-chat">
