Uniao de branches

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MindMeet</title>
+    <title>Hermes</title>
 
     <link rel="stylesheet" href="../styles/home.css" />
     <link rel="stylesheet" href="../styles/chat.css" />
@@ -30,7 +30,7 @@
           <img
             src="/image/DALL·E 2023-01-19 20.57.48 - A chat icon with an owl.png"
           />
-          <div class="logo_name">MindMeet</div>
+          <div class="logo_name">Hermes</div>
         </div>
         <button id="side_menu_btn">
           <span class="material-icons"> menu </span>
@@ -268,7 +268,7 @@
           </div>
         </section>
         <section id="conversation" class="conversation">
-          <h1>MindMeet</h1>
+          <h1>Hermes</h1>
           <p class="text-start">
             Transforme suas sessões de terapia em experiências ainda mais
             pessoais.
