--- a/src/views/login.html
+++ b/src/views/login.html
@@ -16,7 +16,7 @@
     <div class="welcome-login">
       <div class="container-login">
         <header class="header">
-          <h1>Bem vindo(a) ao MindMeet!</h1>
+          <h1>Bem vindo(a) ao Hermes!</h1>
           <p>Uma nova era de mensagens</p>
         </header>
         <form action="/auth/login" class="form-login" method="post">
